# agent-ops-manager

./: .env.example  DECISIONS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
demo/: run_demo.py
scripts/: run_governed_triage.py
src/: bootstrap.py
src/api/: auth.py  main.py
src/core/: __init__.py  audit.py  feedback.py  models.py  policy.py  quality.py  router.py  state_store.py  supervisor.py  worker.py
src/integrations/: __init__.py  demo_worker.py  escalation_agent_http_worker.py
tests/: test_connection_cleanup.py  test_escalation_agent_http_integration.py  test_persistence_and_auth.py  test_policy_and_audit.py  test_routing_and_feedback.py  test_supervisor.py
