[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-ops-manager"
version = "2.0.0"
description = "Supervises AI agents with earned autonomy, WIP limits, human escalation, and a full audit trail."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "streamlit>=1.36.0",
]

[project.optional-dependencies]
llm = ["langchain-anthropic>=0.1.20", "anthropic>=0.34.0"]
dev = ["pytest>=8.2.0", "httpx>=0.27.0"]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
